--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -7,7 +7,13 @@
 #     - Class begins!
 #     - Sign-up for [lab and section times](https://goo.gl/forms/zulZXeFLR1hhu1mh2).
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
-- date: 2/04/2019
+- date: 2/7/2019
+  text: |
+    - [Proj1](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj1/proj1.ipynb) is due Tuesday 2/12 @ 6pm. No homework is due next week.
+    - [Alternate/Excused Exam Request Form](https://goo.gl/forms/iMy9ijec1bpKWAx42)
+    - SQL Review Session on Saturday (2/9) from 3-5 PM at 306 Soda (HP Auditorium)
+
+- date: 2/4/2019
   text: |
     - [Lab3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab03/lab03.ipynb) and [Vitamin 2](https://gradescope.com) are due Wednesday 2/6 @ 11:59pm.
     - [Proj1](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj1/proj1.ipynb) is due Tuesday 2/12 @ 6pm. No homework is due next week.
