--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -70,6 +70,7 @@
   resources: '- [Textbook: Data Visualization](https://www.textbook.ds100.org/ch/06/viz_intro.html)
 
     '
+  slides: assets/lectures/lec5/visualization.pdf
   topic: Visualization and EDA II
 - date: 2/12/19
   discussion: Disc4
