--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -56,7 +56,9 @@
   slides: https://docs.google.com/presentation/d/1mQKWp8tHC8rVDUOO69P0wQf4jsj-CvMk4AA73VK0QM0/edit?usp=sharing
   topic: Data Cleaning
 - date: 2/5/19
-  discussion: Disc3
+  discussion: '- [Disc3](assets/discussions/disc03/disc03.pdf)
+
+  '
   lab: '[Lab3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab03/lab03.ipynb)
     (due 2/6)
 
