--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -58,6 +58,8 @@
 - date: 2/5/19
   discussion: '- [Disc3](assets/discussions/disc03/disc03.pdf)
 
+  - [Solutions](assets/discussions/disc03/disc03_sol.pdf)
+
   '
   lab: '[Lab3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab03/lab03.ipynb)
     (due 2/6)
