SQL Review Worksheet Solutions

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -91,6 +91,8 @@
 
     - [SQL Review Worksheet](assets/discussions/sqlReview/sqlReview.pdf)
 
+    - [SQL Review Worksheet Solutions](assets/discussions/sqlReview/sqlReviewSol.pdf)
+
     '
   topic: SQL
 - date: 2/19/19
