--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -4,12 +4,16 @@
     - [Solutions](assets/discussions/disc01/disc01_sol.pdf)
 
     '
-  homework: '[HW1](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw1/hw1.ipynb)
+  homework: '- [HW1](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw1/hw1.ipynb)
     (due 1/28)
 
+    - [Solutions](https://github.com/DS-100/sp19/blob/master/hw/hw1/hw1_sol/hw1.ipynb)
+
     '
-  lab: '[Lab1](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab01/lab01.ipynb)
+  lab: '- [Lab1](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab01/lab01.ipynb)
     (due 1/23)
+
+    - [Solutions](https://github.com/DS-100/sp19/blob/master/labs/lab01/lab01_sol.ipynb)
 
     '
   resources: '- [Textbook: Data Science Life Cycle](https://www.textbook.ds100.org/ch/01/lifecycle_intro.html)
@@ -32,8 +36,10 @@
     (due 2/12 @ 6pm)
 
     '
-  lab: '[Lab2](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab02/lab02.ipynb)
+  lab: '- [Lab2](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab02/lab02.ipynb)
     (due 1/30)
+
+    - [Solutions](https://github.com/DS-100/sp19/blob/master/labs/lab02/lab02_sol.ipynb)
 
     '
   resources: '- [Textbook: Tabular Data](https://www.textbook.ds100.org/ch/03/pandas_intro.html)
