--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -7,6 +7,11 @@
 #     - Class begins!
 #     - Sign-up for [lab and section times](https://goo.gl/forms/zulZXeFLR1hhu1mh2).
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
+- date: 2/11/2019
+  text: |
+    - [Proj1](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj1/proj1.ipynb) is due Tuesday 2/12 @ 6pm. No homework is due next week.
+    - [Lab4](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab04/lab04.ipynb) and [Vitamin 3](https://gradescope.com) are due Wednesday 2/13 @ 11:59pm.
+
 - date: 2/7/2019
   text: |
     - [Proj1](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj1/proj1.ipynb) is due Tuesday 2/12 @ 6pm. No homework is due next week.
