--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -85,7 +85,10 @@
 - date: 2/12/19
   discussion: Disc4
   homework: Proj1 Due, HW2
-  lab: Lab4
+  lab: '[Lab4](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab04/lab04.ipynb)
+  (due 2/13)
+
+  '
   resources: '- [Textbook: Working with Text](https://www.textbook.ds100.org/ch/08/text_intro.html)
 
     '
