--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -84,7 +84,10 @@
   topic: Visualization II
 - date: 2/12/19
   discussion: Disc4
-  homework: Proj1 Due, HW2
+  homework: '[HW2](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw2/hw2.ipynb)
+  (due 2/19 @ 6pm)
+
+  '
   lab: '[Lab4](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab04/lab04.ipynb)
   (due 2/13)
 
