--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -114,8 +114,13 @@
 
     - [SQL Review Worksheet Solutions](assets/discussions/sqlReview/sqlReviewSol.pdf)
 
+    - [Demos on Datahub](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=lectures/lec08)
+
+    - [Demos on Github](https://github.com/DS-100/sp19/tree/master/lectures/lec08)
+
     '
   topic: SQL
+  slides: https://docs.google.com/presentation/d/1VtOxzUE-qynAnJ3JmDyJ1WfjZTUixTihpcXZI4-uWX8/edit?usp=sharing
 - date: 2/19/19
   discussion: Disc5
   homework: HW3
