--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -131,8 +131,13 @@
   lab: '[Lab5](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab05/lab05.ipynb)
   (due 2/20)
 
+    - [Demos on Datahub](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=lectures/lec09)
+
+    - [Demos on Github](https://github.com/DS-100/sp19/tree/master/lectures/lec09)
+
   '
   topic: Dimensionality Reduction
+  slides: https://docs.google.com/presentation/d/1qcAB9vvulo0Xqd1Ix7X2SgVUx4cJh_Lvp2NXl2QItHs/edit?usp=sharing
 - date: 2/21/19
   topic: Missing Values
 - date: 2/26/19
