--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -7,6 +7,13 @@
 #     - Class begins!
 #     - Sign-up for [lab and section times](https://goo.gl/forms/zulZXeFLR1hhu1mh2).
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
+- date: 2/20/2019
+  text: |
+    - [HW2](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw2/hw2.ipynb) deadline extended to Wednesday 2/20 @ 11:59pm.
+    - [Lab5](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab05/lab05.ipynb) and [Vitamin 4](https://gradescope.com) are due Wednesday 2/20 @ 11:59pm.
+    - HW1 regrade request deadline extended to Wednesday 2/20 @ 11:59pm
+    - Midterm 1 6:40-8:00pm Thursday 2/28; seat assignments will be released Wednesday 2/27.
+
 - date: 2/18/2019
   text: |
     - [HW2](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw2/hw2.ipynb) is due Tuesday 2/19 @ 6pm.
