Added hw3 to announcements

--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -9,6 +9,7 @@
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
 - date: 2/20/2019
   text: |
+    - [HW3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw3/hw3.ipynb) is due Monday 2/25 @ 11:59pm.
     - [HW2](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw2/hw2.ipynb) deadline extended to Wednesday 2/20 @ 11:59pm.
     - [Lab5](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab05/lab05.ipynb) and [Vitamin 4](https://gradescope.com) are due Wednesday 2/20 @ 11:59pm.
     - HW1 regrade request deadline extended to Wednesday 2/20 @ 11:59pm
