--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -150,7 +150,7 @@
   '
   slides: https://docs.google.com/presentation/d/10q_ei9ddX0TBqOq2u2_jVr1F6Hxa9T0XDnom-ZukLV8/edit?usp=sharing
 - date: 2/26/19
-  discussion: Disc6
+  discussion:
   homework:
   lab: Lab6
   topic: Case Study, Review
