--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -127,6 +127,9 @@
   slides: https://docs.google.com/presentation/d/1VtOxzUE-qynAnJ3JmDyJ1WfjZTUixTihpcXZI4-uWX8/edit?usp=sharing
 - date: 2/19/19
   discussion: '- [Disc5](assets/discussions/disc05/disc05.pdf)
+
+  - [Solutions](assets/discussions/disc05/disc05_sol.pdf)
+
   '
   homework: '[HW3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw3/hw3.ipynb)
   (due Mon 2/25 @ 11:59pm)'
