--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -32,8 +32,10 @@
     - [Solutions](https://github.com/DS-100/sp19/blob/master/disc/disc02/disc02_sol.ipynb)
 
     '
-  homework: '[Proj1](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj1/proj1.ipynb)
+  homework: '- [Proj1](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj1/proj1.ipynb)
     (due 2/12 @ 6pm)
+
+    - [Solutions](https://github.com/DS-100/sp19/blob/master/proj/proj1/proj1_sol/proj1.ipynb)
 
     '
   lab: '- [Lab2](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab02/lab02.ipynb)
