Lab 3 and 4 solutions

--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -7,6 +7,11 @@
 #     - Class begins!
 #     - Sign-up for [lab and section times](https://goo.gl/forms/zulZXeFLR1hhu1mh2).
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
+- date: 2/25/2019
+  text: |
+    - [HW3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw3/hw3.ipynb) deadline extended to Tuesday 2/26 @ 9:00am.
+    - Midterm 1 6:40-8:00pm Thursday 2/28; seat assignments have been released on Piazza.
+
 - date: 2/21/2019
   text: |
     - [HW3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw3/hw3.ipynb) is due Monday 2/25 @ 11:59pm.
