--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -74,6 +74,8 @@
   lab: '- [Lab3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab03/lab03.ipynb)
     (due 2/6)
 
+    - [Solutions](https://github.com/DS-100/sp19/blob/master/labs/lab03/lab03_sol.ipynb)
+
     - [Vitamin 2 Solutions](assets/vitamins/vit2_sol.pdf)
 
     '
@@ -98,8 +100,10 @@
   (**extended** due Wed 2/20 @ 11:59pm)
 
   '
-  lab: '[Lab4](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab04/lab04.ipynb)
+  lab: '- [Lab4](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab04/lab04.ipynb)
   (due 2/13)
+
+  - [Solutions](https://github.com/DS-100/sp19/blob/master/labs/lab04/lab04_sol.ipynb)
 
   '
   resources: '- [Textbook: Working with Text](https://www.textbook.ds100.org/ch/08/text_intro.html)
@@ -134,7 +138,7 @@
 
   '
   homework: '[HW3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw3/hw3.ipynb)
-  (due Mon 2/25 @ 11:59pm)'
+  (**extended** due Tue 2/26 @ 9:00am)'
   resources: '- [Demos on Datahub](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=lectures/lec09)
 
     - [Demos on Github](https://github.com/DS-100/sp19/tree/master/lectures/lec09)
