--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -10,6 +10,7 @@
 - date: 2/25/2019
   text: |
     - [HW3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw3/hw3.ipynb) deadline extended to Tuesday 2/26 @ 9:00am.
+    - [Lab6](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab06/lab06.ipynb) and [Vitamin 5](https://gradescope.com) are due Wednesday 2/27 @ 11:59pm.
     - Midterm 1 6:40-8:00pm Thursday 2/28; seat assignments have been released on Piazza.
 
 - date: 2/21/2019
