--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -144,7 +144,7 @@
     - [Demos on Github](https://github.com/DS-100/sp19/tree/master/lectures/lec09)
 
   '
-  lab: '[Lab5](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab05/lab05.ipynb)
+  lab: '- [Lab5](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab05/lab05.ipynb)
   (due 2/20)
 
   '
@@ -162,7 +162,10 @@
 - date: 2/26/19
   discussion:
   homework:
-  lab: Lab6
+  lab: '- [Lab6](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab06/lab06.ipynb)
+  (due 2/27)
+
+  '
   topic: Case Study, Review
 - date: 2/28/19
   topic: Midterm 1
