--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -160,7 +160,7 @@
   '
   slides: https://docs.google.com/presentation/d/10q_ei9ddX0TBqOq2u2_jVr1F6Hxa9T0XDnom-ZukLV8/edit?usp=sharing
 - date: 2/26/19
-  discussion:
+  discussion: '- [Midterm Review](assets/discussions/lab06midtermreview/lab06midtermreview.pdf)
   homework:
   lab: '- [Lab6](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab06/lab06.ipynb)
   (due 2/27)
