--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -105,6 +105,8 @@
 
   - [Solutions](https://github.com/DS-100/sp19/blob/master/labs/lab04/lab04_sol.ipynb)
 
+  - [Vitamin 3 Solutions](assets/vitamins/vit3_sol.pdf)
+
   '
   resources: '- [Textbook: Working with Text](https://www.textbook.ds100.org/ch/08/text_intro.html)
 
