--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -7,6 +7,15 @@
 #     - Class begins!
 #     - Sign-up for [lab and section times](https://goo.gl/forms/zulZXeFLR1hhu1mh2).
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
+- date: 2/26/2019
+  text: |
+    - [HW3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw3/hw3.ipynb) deadline extended to Tuesday 2/26 @ 9:00am.
+    - [Lab6](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab06/lab06.ipynb) and [Vitamin 5](https://gradescope.com) are due Wednesday 2/27 @ 11:59pm.
+    - Midterm 1 6:40-8:00pm this Thursday 2/28
+      - See the [Midterm 1 Logistics Piazza post](https://piazza.com/class/jq38w3bffphe9?cid=555) for more info.
+      - You may bring a two-sided handwritten sheet of notes that you create.
+      - The [Midterm 1 Reference Sheet](assets/exams/sp19/sp19_mt1_reference_sheet.pdf) and scratch paper will be provided.
+
 - date: 2/25/2019
   text: |
     - [HW3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw3/hw3.ipynb) deadline extended to Tuesday 2/26 @ 9:00am.
