--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -164,6 +164,8 @@
 - date: 2/26/19
   discussion: '- [Midterm Review](assets/discussions/lab06midtermreview/lab06midtermreview.pdf)
 
+  - [Solutions](assets/discussions/lab06midtermreview/lab06midtermreview_sol.pdf)
+
   '
   homework:
   lab: '- [Lab6](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab06/lab06.ipynb)
