--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -162,17 +162,20 @@
   '
   slides: https://docs.google.com/presentation/d/10q_ei9ddX0TBqOq2u2_jVr1F6Hxa9T0XDnom-ZukLV8/edit?usp=sharing
 - date: 2/26/19
+  resources: '- [Demos on Datahub](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=lectures/lec11)
+
+    - [Demos on Github](https://github.com/DS-100/sp19/tree/master/lectures/lec11)
+  '
   discussion: '- [Midterm Review](assets/discussions/lab06midtermreview/lab06midtermreview.pdf)
 
   - [Solutions](assets/discussions/lab06midtermreview/lab06midtermreview_sol.pdf)
-
   '
   homework:
   lab: '- [Lab6](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab06/lab06.ipynb)
   (due 2/27)
-
   '
-  topic: Case Study, Review
+  topic: Case Study
+  slides: https://docs.google.com/presentation/d/1q_67p0lzXLP0jRPmQbTdY8gSfL0ya8lnTKuFq__J4NQ/edit?usp=sharing
 - date: 2/28/19
   topic: Midterm 1
 - date: 3/5/19
