--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -149,6 +149,10 @@
   lab: '- [Lab5](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab05/lab05.ipynb)
   (due 2/20)
 
+  - [Solutions](https://github.com/DS-100/sp19/blob/master/labs/lab05/lab05_sol.ipynb)
+
+  - [Vitamin 4 Solutions](assets/vitamins/vit4_sol.pdf)
+
   '
   topic: Dimensionality Reduction
   slides: https://docs.google.com/presentation/d/1qcAB9vvulo0Xqd1Ix7X2SgVUx4cJh_Lvp2NXl2QItHs/edit?usp=sharing
