--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -7,6 +7,11 @@
 #     - Class begins!
 #     - Sign-up for [lab and section times](https://goo.gl/forms/zulZXeFLR1hhu1mh2).
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
+- date: 3/6/2019
+  text: |
+    - [HW4](assets/hw/hw4.pdf) due Tuesday 3/12 @ 6pm.
+    - [Midterm survey](https://goo.gl/forms/niSRu3a8ic0hbZqe2) screenshot due Wednesday 3/6 @ 11:59pm.
+
 - date: 2/26/2019
   text: |
     - [HW3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw3/hw3.ipynb) deadline extended to Tuesday 2/26 @ 9:00am.
