--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -170,7 +170,11 @@
     - [Solutions](assets/discussions/lab06midtermreview/lab06midtermreview_sol.pdf) '
   homework: null
   lab: '- [Lab6](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab06/lab06.ipynb)
-    (due 2/27) '
+    (due 2/27)
+
+    - [Vitamin 5 Solutions](assets/vitamins/vit5_sol.pdf)
+
+    '
   resources: '- [Demos on Datahub](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=lectures/lec11)
 
     - [Demos on Github](https://github.com/DS-100/sp19/tree/master/lectures/lec11) '
