--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -189,12 +189,12 @@
 
     '
   slides: assets/lectures/lec12/inference.pdf
-  topic: Generalization and Empirical Risk Minimization
+  topic: Foundations of Statistical Inference
 - date: 3/7/19
   resources: '- [Textbook: Modeling and Estimation](https://www.textbook.ds100.org/ch/10/modeling_intro.html)
 
     '
-  topic: Modeling and Estimation
+  topic: Foundations of Statistical Inference
 - date: 3/12/19
   discussion: Disc8
   homework: HW5
