--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -183,7 +183,9 @@
 - date: 2/28/19
   topic: Midterm 1
 - date: 3/5/19
-  discussion: Disc7
+  discussion: '- [Disc6](assets/discussions/disc06/disc06.pdf)
+
+    '
   homework: '[HW4](assets/hw/hw4.pdf)'
   resources: '- [Textbook: Probability and Generalization](https://www.textbook.ds100.org/ch/12/prob_and_gen.html)
 
