--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -186,7 +186,7 @@
   discussion: '- [Disc6](assets/discussions/disc06/disc06.pdf)
 
     '
-  homework: '[HW4](assets/hw/hw4.pdf)'
+  homework: '[HW4](assets/hw/hw4.pdf) (due 3/12 @ 6pm)'
   resources: '- [Textbook: Probability and Generalization](https://www.textbook.ds100.org/ch/12/prob_and_gen.html)
 
     '
