--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -202,7 +202,10 @@
 - date: 3/12/19
   discussion: Disc8
   homework: HW5
-  lab: Lab8
+  lab: '- [Lab7](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab07/lab07.ipynb)
+    (due 3/13)
+
+  '
   resources: '- [Textbook: Linear Regression](https://www.textbook.ds100.org/ch/13/linear_models.html)
 
     - [Textbook: Feature Engineering](https://www.textbook.ds100.org/ch/14/feature_engineering.html)
