--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -201,7 +201,7 @@
   topic: Foundations of Statistical Inference
 - date: 3/12/19
   discussion: Disc8
-  homework: HW5
+  homework: '[HW5](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw5/hw5.ipynb) (due 3/19 @ 6pm)'
   lab: '- [Lab7](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab07/lab07.ipynb)
     (due 3/13)
 
