--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -193,7 +193,7 @@
 
     '
   slides: assets/lectures/lec12/inference.pdf
-  topic: Foundations of Statistical Inference
+  topic: Foundations of Statistical Inference (Slides update 03/12/2019)
 - date: 3/7/19
   resources: '- [Textbook: Modeling and Estimation](https://www.textbook.ds100.org/ch/10/modeling_intro.html)
 
