--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -7,6 +7,10 @@
 #     - Class begins!
 #     - Sign-up for [lab and section times](https://goo.gl/forms/zulZXeFLR1hhu1mh2).
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
+- date: 3/14/2019
+  text: |
+    - [HW5](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw5/hw5.ipynb) is due Tuesday 3/19 @ 6pm.
+
 - date: 3/11/2019
   text: |
     - [HW4](assets/hw/hw4.pdf) due Tuesday 3/12 @ 6pm.
