--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -96,8 +96,10 @@
     - [Solutions](assets/discussions/disc04/disc04_sol.pdf)
 
     '
-  homework: '[HW2](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw2/hw2.ipynb)
+  homework: '- [HW2](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw2/hw2.ipynb)
     (**extended** due Wed 2/20 @ 11:59pm)
+
+    - [Solutions](https://github.com/DS-100/sp19/blob/master/hw/hw2/hw2_sol/hw2.ipynb)
 
     '
   lab: '- [Lab4](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab04/lab04.ipynb)
@@ -139,8 +141,12 @@
     - [Solutions](assets/discussions/disc05/disc05_sol.pdf)
 
     '
-  homework: '[HW3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw3/hw3.ipynb)
-    (**extended** due Tue 2/26 @ 9:00am)'
+  homework: '- [HW3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw3/hw3.ipynb)
+    (**extended** due Tue 2/26 @ 9:00am)
+
+    - [Solutions](https://github.com/DS-100/sp19/blob/master/hw/hw3/hw3_sol/hw3.ipynb)
+
+    '
   lab: '- [Lab5](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab05/lab05.ipynb)
     (due 2/20)
 
