--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -217,7 +217,7 @@
   lab: '- [Lab7](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab07/lab07.ipynb)
     (due 3/13)
 
-  '
+    '
   slides: assets/lectures/linRegn.pdf
   resources: '- [Textbook: Linear Regression](https://www.textbook.ds100.org/ch/13/linear_models.html)
 
@@ -226,7 +226,6 @@
     '
   topic: Linear Regression and Feature Engineering
 - date: 3/14/19
-  '
   slides: assets/lectures/gradientDescent.pdf
   resources: '- [Textbook: Gradient Descent](https://www.textbook.ds100.org/ch/11/gradient_descent.html)
 
@@ -235,7 +234,10 @@
 - date: 3/19/19
   discussion: Disc9
   homework: HW6
-  lab: Lab9
+  lab: '- [Lab8](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab08/lab08.ipynb)
+    (due 3/20)
+
+    '
   resources: '- [Textbook: Bias-Variance Tradeoff](https://www.textbook.ds100.org/ch/15/bias_intro.html)
 
     '
