--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -195,6 +195,8 @@
 
     - [Disc6e](assets/discussions/disc06e/disc06e.pdf)
 
+    - [Solutions](assets/discussions/disc06e/disc06e_sol.pdf)
+
     '
   homework: '[HW4](assets/hw/hw4.pdf) (due 3/12 @ 6pm)'
   resources: '- [Textbook: Probability and Generalization](https://www.textbook.ds100.org/ch/12/prob_and_gen.html)
@@ -210,7 +212,11 @@
 - date: 3/12/19
   discussion: '- [Disc7](assets/discussions/disc07/disc07.pdf)
 
+    - [Solutions](assets/discussions/disc07/disc07_sol.pdf)
+
     - [Disc7e](assets/discussions/disc07e/disc07e.pdf)
+
+    - [Solutions](assets/discussions/disc07e/disc07e_sol.pdf)
 
     '
   homework: '[HW5](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw5/hw5.ipynb) (due 3/19 @ 6pm)'
