--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -238,6 +238,7 @@
     '
   topic: Gradient Descent for Risk Optimization (Slides updated 03/19/2019)
 - date: 3/19/19
+  slides: assets/lectures/biasVarTradeoff.pdf
   discussion: Disc9
   homework: HW6
   lab: '- [Lab8](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab08/lab08.ipynb)
@@ -247,7 +248,7 @@
   resources: '- [Textbook: Bias-Variance Tradeoff](https://www.textbook.ds100.org/ch/15/bias_intro.html)
 
     '
-  topic: Bias-Variance Tradeoff and Regularization
+  topic: Risk Optimization and Bias-Variance Trade-Off 
 - date: 3/21/19
   resources: '- [Textbook: Regularization](https://www.textbook.ds100.org/ch/16/reg_intro.html)
 
