--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -7,6 +7,11 @@
 #     - Class begins!
 #     - Sign-up for [lab and section times](https://goo.gl/forms/zulZXeFLR1hhu1mh2).
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
+- date: 3/19/2019
+  text: |
+    - [HW6](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw6/hw6.ipynb) is due Tuesday 4/2 @ 6pm.
+    - [Lab8](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab08/lab08.ipynb) and [Vitamin 8](https://gradescope.com) are due Wednesday 3/20 @ 11:59pm.
+
 - date: 3/15/2019
   text: |
     - [HW5](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw5/hw5.ipynb) is due Tuesday 3/19 @ 6pm.
