--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -253,11 +253,10 @@
 
     - [Textbook: Cross-Validation](https://www.textbook.ds100.org/ch/15/bias_cv.html)
 
-    '
-  slides: assets/lectures/cv.pdf
-    '
-  slides: assets/lectures/regularization.pdf
-  topic: Cross-Validation and Regularization
+  - [Slides: Cross-Validation](https://github.com/DS-100/sp19/tree/master/lectures/cv.pdf)
+  - [Slides: Regularized Regression](https://github.com/DS-100/sp19/tree/master/lectures/regularization.pdf)
+  
+  topic: Cross-Validation and Regularized Regression
   discussion: Disc08
 - date: 3/26/19
   topic: Spring Break
