--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -198,7 +198,11 @@
     - [Solutions](assets/discussions/disc06e/disc06e_sol.pdf)
 
     '
-  homework: '[HW4](assets/hw/hw4.pdf) (due 3/12 @ 6pm)'
+  homework: '- [HW4](assets/hw/hw4.pdf) (due 3/12 @ 6pm)
+
+    - [Solutions](assets/hw/hw4_sol.pdf)
+
+    '
   resources: '- [Textbook: Probability and Generalization](https://www.textbook.ds100.org/ch/12/prob_and_gen.html)
 
     '
