--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -269,7 +269,10 @@
   discussion: Disc8
 - date: 4/2/19
   discussion: Disc9
-  homework: Proj2
+  homework: '
+   [Proj2](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj2/proj2.ipynb)
+    (due 4/16 @ 6pm)
+    '
   lab: '- [Lab9](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab09/lab09.ipynb)
     (due 4/3)
 
