--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -288,9 +288,17 @@
   topic: Logistic Regression
 - date: 4/4/19
   topic: Classification
+  resources: '
+
+  - [Demos on Datahub](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=lectures/lec19)
+
+  - [Demos on Github](https://github.com/DS-100/sp19/tree/master/lectures/lec19)
+
+  '
 - date: 4/9/19
   lab: Lab10
   topic: Decision Trees
+
 - date: 4/11/19
   topic: Midterm 2
   resources: '- Review Session in Wheeler 150 Wed 4/10 8-10 PM
