--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -7,6 +7,13 @@
 #     - Class begins!
 #     - Sign-up for [lab and section times](https://goo.gl/forms/zulZXeFLR1hhu1mh2).
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
+- date: 4/4/2019
+  text: |
+    - Midterm 2 is Thursday 4/11 6:40pm-8pm.
+    - A review session for Midterm 2 is Wednesday 4/10 8pm-10pm.
+    - "[Discussion 8](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=disc/disc02/disc02.ipynb)" is a take-home notebook that is not required or due (but useful practice for the midterm).
+    - [Project 2](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj2/proj2.ipynb) is due Tuesday 4/16 @ 6pm.
+
 - date: 3/30/2019
   text: |
     - [HW6](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw6/hw6.ipynb) is due Tuesday 4/2 @ 6pm.
