--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -266,7 +266,9 @@
   topic: Spring Break
 - date: 3/28/19
   topic: Spring Break
-  discussion: Disc8
+  discussion: '
+  - [Disc8](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=disc/disc08/disc08.ipynb) ([Solution](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=disc/disc08/disc08_sol.ipynb))
+  '
 - date: 4/2/19
   discussion: Disc9
   homework: '
