--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -7,6 +7,14 @@
 #     - Class begins!
 #     - Sign-up for [lab and section times](https://goo.gl/forms/zulZXeFLR1hhu1mh2).
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
+- date: 4/6/2019
+  text: |
+    - [Lab10](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab10/lab10.ipynb) and [Vitamin 10](https://gradescope.com) are due Wednesday 4/10 @ 11:59pm.
+    - Midterm 2 is Thursday 4/11 6:40pm-8pm.
+    - A review session for Midterm 2 is Wednesday 4/10 8pm-10pm.
+    - "[Discussion 8](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=disc/disc08/disc08.ipynb)" is a take-home notebook that is not required or due (but useful practice for the midterm).
+    - [Project 2](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj2/proj2.ipynb) is due Tuesday 4/16 @ 6pm.
+
 - date: 4/4/2019
   text: |
     - Midterm 2 is Thursday 4/11 6:40pm-8pm.
