--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -310,6 +310,7 @@
   slides: https://docs.google.com/presentation/d/1Sut2bvlioC5vKto6fgStzMipfoMgOR-pXBbqkHKoAOw/edit?usp=sharing
   topic: Logistic Regression
 - date: 4/4/19
+  slides: https://docs.google.com/presentation/d/1Y799sM2f3tQQ_XJAVMZ2MK2sh9kAgD-EJQkCJNHDNdo/edit?usp=sharing
   topic: Classification
   resources: '
 
