--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -324,7 +324,13 @@
     (due 4/10)
 
     '
-  topic: Decision Trees
+  topic: Prediction: Classification and Regression
+resources: '
+
+  - [Demos on Datahub](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=lectures/lec20)
+
+  - [Demos on Github](https://github.com/DS-100/sp19/tree/master/lectures/lec20)
+
 
 - date: 4/11/19
   topic: Midterm 2
@@ -339,7 +345,7 @@
   resources: '
 
     '
-  topic: Ensemble Methods
+  topic: Prediction: Classification and Regression
 - date: 4/18/19
   topic: Inference about Model Parameters
 - date: 4/23/19
