--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -322,7 +322,8 @@
   lab: '- [Lab10](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab10/lab10.ipynb)
     (due 4/10)
     '
-topic: Prediction Classification and Regression
+topic: Prediction: Classification and Regression
+slides: assets/lectures/prediction.pdf
 resources: '
    - [Demo on Datahub](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=lectures/lec20)
 
@@ -338,7 +339,7 @@ resources: '
 - date: 4/16/19
   discussion: Disc10
   homework: Proj3
-  topic: Prediction Classification and Regression
+  topic: Prediction: Classification and Regression
 - date: 4/18/19
   topic: Inference about Model Parameters
 - date: 4/23/19
