--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -299,6 +299,10 @@
   lab: '- [Lab9](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab09/lab09.ipynb)
     (due 4/3)
 
+    - [Solutions](https://github.com/DS-100/sp19/blob/master/labs/lab09/lab09_sol.ipynb)
+
+    - [Vitamin 9 Solutions](assets/vitamins/vit9_sol.pdf)
+
     '
   resources: '- [Textbook: Classification](https://www.textbook.ds100.org/ch/17/classification_intro.html)
 
