--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -343,6 +343,7 @@
 - date: 4/16/19
   discussion: Disc10
   topic: "Prediction: Classification and Regression"
+  slides: assets/lectures/prediction.pdf
   homework: '
   [Final Project](project)
   '
